RISC-V: Minimal build failed with --disable-precompiled-headers

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 20
    • Affects Version/s: 20
    • Component/s: hotspot
    • None
    • b16
    • riscv
    • linux

        ====================================================
        A new configuration has been successfully created in
        /home/fyang/openjdk-jdk/build/linux-riscv64-minimal-release
        using configure arguments '--with-debug-level=release --with-jvm-variants=minimal --with-zlib=system --with-boot-jdk=/home/fyang/tools/boot-jdk --with-native-debug-symbols=internal --disable-precompiled-headers --with-jtreg=/home/fyang/tools/jtreg-7+1 --with-gtest=/home/fyang/tools/googletest'.

        Configuration summary:
        * Name: linux-riscv64-minimal-release
        * Debug level: release
        * HS debug level: product
        * JVM variants: minimal
        * JVM features: minimal: 'compiler1 minimal opt-size serialgc'
        * OpenJDK target: OS: linux, CPU architecture: riscv, address length: 64
        * Version string: 20-internal-adhoc.fyang.openjdk-jdk (20-internal)
        * Source date: 1663723199 (2022-09-21T01:19:59Z)

        Tools summary:
        * Boot JDK: openjdk version "20-testing" 2023-03-21 OpenJDK Runtime Environment (build 20-testing-builds.shipilev.net-openjdk-jdk-b202-20220913) OpenJDK 64-Bit Server VM (build 20-testing-builds.shipilev.net-openjdk-jdk-b202-20220913, mixed mode) (at /home/fyang/tools/boot-jdk)
        * Toolchain: gcc (GNU Compiler Collection)
        * C Compiler: Version 11.2.0 (at /usr/bin/gcc)
        * C++ Compiler: Version 11.2.0 (at /usr/bin/g++)

        Build performance summary:
        * Build jobs: 4
        * Memory limit: 15990 MB

        Building target 'images' in configuration 'linux-riscv64-minimal-release'
        Compiling 1 files for BUILD_TOOLS_HOTSPOT
        Compiling 8 files for BUILD_TOOLS_LANGTOOLS
        Compiling 2 files for BUILD_JVMTI_TOOLS
        Generating classes for compiler.properties launcher.properties
        Compiling 17 properties into resource bundles for jdk.javadoc
        Compiling 15 properties into resource bundles for jdk.jdeps
        Compiling 9 properties into resource bundles for jdk.jshell
        Compiling 20 properties into resource bundles for jdk.compiler
        Compiling 127 files for BUILD_java.compiler.interim
        Compiling 408 files for BUILD_jdk.compiler.interim
        Compiling 243 files for BUILD_jdk.javadoc.interim
        Creating support/modules_libs/java.base/minimal/libjvm.so from 565 file(s)
        Creating hotspot/variant-minimal/libjvm/libgtest/libgtest.a from 2 file(s)
        Creating hotspot/variant-minimal/libjvm/gtest/libjvm.so from 146 file(s)
        Creating hotspot/variant-minimal/libjvm/gtest/gtestLauncher from 1 file(s)
        Compiling 31 files for BUILD_JRTFS
        Creating support/modules_libs/java.base/jrt-fs.jar
        Compiling 186 files for BUILD_TOOLS_JDK
        Compiling 2 files for COMPILE_DEPEND
        Compiling 4 properties into resource bundles for jdk.httpserver
        Compiling 11 properties into resource bundles for jdk.jartool
        Compiling 71 files for COMPILE_CREATE_SYMBOLS
        Compiling 11 properties into resource bundles for jdk.management.agent
        Compiling 4 properties into resource bundles for jdk.jdi
        Compiling 9 properties into resource bundles for jdk.jlink
        Compiling 4 properties into resource bundles for jdk.jlink
        Compiling 1 properties into resource bundles for jdk.jlink
        Compiling 224 properties into resource bundles for jdk.localedata
        Compiling 11 properties into resource bundles for java.base
        Compiling 6 properties into resource bundles for java.base
        /home/fyang/openjdk-jdk/src/hotspot/cpu/riscv/templateInterpreterGenerator_riscv.cpp: In member function 'u_char* TemplateInterpreterGenerator::generate_Reference_get_entry()':
        /home/fyang/openjdk-jdk/src/hotspot/cpu/riscv/templateInterpreterGenerator_riscv.cpp:829:31: error: 'java_lang_ref_Reference' has not been declared
          829 | const int referent_offset = java_lang_ref_Reference::referent_offset();
              | ^~~~~~~~~~~~~~~~~~~~~~~
        gmake[3]: *** [lib/CompileJvm.gmk:149: /home/fyang/openjdk-jdk/build/linux-riscv64-minimal-release/hotspot/variant-minimal/libjvm/objs/templateInterpreterGenerator_riscv.o] Error 1
        gmake[3]: *** Waiting for unfinished jobs....
        gmake[2]: *** [make/Main.gmk:252: hotspot-minimal-libs] Error 2
        gmake[2]: *** Waiting for unfinished jobs....

        ERROR: Build failed for target 'images' in configuration 'linux-riscv64-minimal-release' (exit code 2)

        === Output from failing command(s) repeated here ===
        * For target hotspot_variant-minimal_libjvm_objs_templateInterpreterGenerator_riscv.o:
        /home/fyang/openjdk-jdk/src/hotspot/cpu/riscv/templateInterpreterGenerator_riscv.cpp: In member function 'u_char* TemplateInterpreterGenerator::generate_Reference_get_entry()':
        /home/fyang/openjdk-jdk/src/hotspot/cpu/riscv/templateInterpreterGenerator_riscv.cpp:829:31: error: 'java_lang_ref_Reference' has not been declared
          829 | const int referent_offset = java_lang_ref_Reference::referent_offset();
              | ^~~~~~~~~~~~~~~~~~~~~~~

        * All command lines available in /home/fyang/openjdk-jdk/build/linux-riscv64-minimal-release/make-support/failure-logs.
        === End of repeated output ===

        No indication of failed target found.
        HELP: Try searching the build log for '] Error'.
        HELP: Run 'make doctor' to diagnose build problems.

        make[1]: *** [/home/fyang/openjdk-jdk/make/Init.gmk:315: main] Error 2
        make: *** [/home/fyang/openjdk-jdk/make/Init.gmk:186: images] Error 2
        Wed Sep 21 09:49:10 CST 2022

              Assignee:
              Fei Yang
              Reporter:
              Fei Yang
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: