8294083: RISC-V: Minimal build failed with --disable-precompiled-headers

* backport JDK-8294083

* backport 8295468: RISC-V: Minimal builds are broken