src/hotspot/cpu/riscv/c1_Runtime1_riscv.cpp
@@ -34,6 +34,7 @@
 #include "compiler/oopMap.hpp"
 #include "gc/shared/cardTable.hpp"
 #include "gc/shared/cardTableBarrierSet.hpp"
+#include "gc/shared/collectedHeap.hpp"
 #include "interpreter/interpreter.hpp"
 #include "memory/universe.hpp"
 #include "nativeInst_riscv.hpp"
